--- a/index.html
+++ b/index.html
@@ -7,44 +7,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Protocolo Martinelli</title>
 </head>
 
 <body>
     <div class="container">
-        <h1 class="text-center m-5">Protocolo de Avaliação o Frênulo da Língua em Bebês</h1>
+        <div class="header">
+            <h1 class="m-5">Protocolo de Avaliação o Frênulo da Língua em Bebês</h1>
+            <div>
+                <img class="logo" src="img/logotipo.jpg" alt="">
+                <p>Dra Maria Raquel</p>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="d-flex justify-content-end">
+            <button class="btn btn-sm btn-primary" onclick="print()">Imprimir</button>
+        </div>
 
         <hr>
 
         <div class="row">
-            <div class="form-group col-md-4">
+            <div class="form-group col-4">
                 <label for="form-label">Nome</label>
                 <input class="form-control" type="text">
             </div>
-            <div class="form-group col-md-2">
+            <div class="form-group col-2">
                 <label for="form-label">Data do Exame</label>
                 <input class="form-control" type="date" id="date-exam">
             </div>
-            <div class="form-group col-md-2">
-                <label for="form-label">Data de Nascimento</label>
+            <div class="form-group col-2">
+                <label for="form-label">Data Nasc.</label>
                 <input class="form-control" type="date" id="date-birth">
             </div>
-            <div class="form-group col-md-2">
+            <div class="form-group col-2">
                 <label for="form-label">Idade</label>
                 <input class="form-control" disabled id="age">
             </div>
-            <div class="form-group col-md-2">
+            <div class="form-group col-2">
                 <label>Gênero</label>
                 <select class="form-select">
                     <option value="M">Masculino</option>
                     <option value="F">Femenino</option>
                 </select>
             </div>
-            <div class="form-group col-md-4">
+            <div class="form-group col-4">
                 <label for="form-label">Mãe</label>
                 <input class="form-control" type="text">
+            </div>
+        </div>
+
+        <hr>
+
+        <h2 class="text-center">Antecedentes Familiares</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>Há casos na família de alteração de frênulo da língua?</p>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0">
+                    <label class="form-check-label" for="historic-0">Não</label>
+                </div>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="historic" id="historic-1" value="1">
+                    <label class="form-check-label" for="historic-1">Sim</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="">Quem e qual o problema</label>
+                    <textarea class="form-control" cols="30" rows="5"></textarea>
+                </div>
+            </div>
+
+            <div class="col-6">
+                <p>Problemas de Saúde</p>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="health" id="health-0">
+                    <label class="form-check-label" for="health-0">Não</label>
+                </div>
+
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="health" id="health-1">
+                    <label class="form-check-label" for="health-1">Sim</label>
+                </div>
+
+                <div class="form-group">
+                    <label for="">Quais</label>
+                    <textarea class="form-control" cols="30" rows="5"></textarea>
+                </div>
             </div>
         </div>
 
@@ -60,17 +115,17 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-1-1"><img src="img/1/1.png" alt=""></label>
-                        <p>Lábio Fechado</p>
+                        <p>Lábio Fechado (0)</p>
                         <input type="radio" name="img-1" id="img-1-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-1-2"><img src="img/1/2.png" alt=""></label>
-                        <p>Lábio Entreaberto</p>
+                        <p>Lábio Entreaberto (1)</p>
                         <input type="radio" name="img-1" id="img-1-2" value="1">
                     </div>
                     <div class="item">
                         <label for="img-1-3"><img src="img/1/3.png" alt=""></label>
-                        <p>Lábio Aberto</p>
+                        <p>Lábio Aberto (1)</p>
                         <input type="radio" name="img-1" id="img-1-3" value="1">
                     </div>
                     <div class="item">
@@ -80,7 +135,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
                     <input class="form-control" type="file" id="img-1">
@@ -96,22 +151,22 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-2-1"><img src="img/2/1.png" alt=""></label>
-                        <p>Língua na linha média</p>
+                        <p>Língua na linha média (0)</p>
                         <input type="radio" name="img-2" id="img-2-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-2-2"><img src="img/2/2.png" alt=""></label>
-                        <p>Língua elevada</p>
+                        <p>Língua elevada (0)</p>
                         <input type="radio" name="img-2" id="img-2-2" value="0">
                     </div>
                     <div class="item">
                         <label for="img-2-3"><img src="img/2/3.png" alt=""></label>
-                        <p>Língua na linha média com <br> elevação das laterais</p>
+                        <p>Língua na linha média com <br> elevação das laterais (2)</p>
                         <input type="radio" name="img-2" id="img-2-3" value="2">
                     </div>
                     <div class="item">
                         <label for="img-2-4"><img src="img/2/4.png" alt=""></label>
-                        <p>Ponta da língua baixa com <br> elevação das laterais</p>
+                        <p>Ponta da língua baixa com <br> elevação das laterais (2)</p>
                         <input type="radio" name="img-2" id="img-2-4" value="2">
                     </div>
                     <div class="item">
@@ -121,7 +176,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
                     <input class="form-control" type="file" id="img-2">
@@ -138,17 +193,17 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-3-1"><img src="img/3/1.png" alt=""></label>
-                        <p>Arredondada</p>
+                        <p>Arredondada (0)</p>
                         <input type="radio" name="img-3" id="img-3-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-3-2"><img src="img/3/2.png" alt=""></label>
-                        <p>Ligeria fenda no ápice</p>
+                        <p>Ligeria fenda no ápice (2)</p>
                         <input type="radio" name="img-3" id="img-3-2" value="2">
                     </div>
                     <div class="item">
                         <label for="img-3-3"><img src="img/3/3.png" alt=""></label>
-                        <p>Formato de coração</p>
+                        <p>Formato de coração (3)</p>
                         <input type="radio" name="img-3" id="img-3-3" value="3">
                     </div>
                     <div class="item">
@@ -158,7 +213,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
                     <input class="form-control" type="file" id="img-3">
@@ -185,7 +240,7 @@
                     </div>
                     <div class="item">
                         <label for="img-4-3"><img src="img/4/3.png" alt=""></label>
-                        <p>Visualizado com manobra*</p>
+                        <p>Visualizado com manobra</p>
                         <input type="radio" name="img-4" id="img-4-3" value="0">
                     </div>
                     <div class="item">
@@ -195,7 +250,7 @@
                 </div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
                     <input class="form-control" type="file" id="img-4">
@@ -210,12 +265,12 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-4-1-1"><img src="img/4-1/1.png" alt=""></label>
-                        <p>Delgado</p>
+                        <p>Delgado (0)</p>
                         <input type="radio" name="img-4-1" id="img-4-1-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-4-1-2"><img src="img/4-1/2.png" alt=""></label>
-                        <p>Espesso</p>
+                        <p>Espesso (2)</p>
                         <input type="radio" name="img-4-1" id="img-4-1-2" value="2">
                     </div>
                 </div>
@@ -230,17 +285,17 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-4-2-1"><img src="img/4-2/1.png" alt=""></label>
-                        <p>No terço médio</p>
+                        <p>No terço médio (0)</p>
                         <input type="radio" name="img-4-2" id="img-4-2-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-4-2-2"><img src="img/4-2/2.png" alt=""></label>
-                        <p>Entre o terço médio e o ápice</p>
+                        <p>Entre o terço médio e o ápice (2)</p>
                         <input type="radio" name="img-4-2" id="img-4-2-2" value="2">
                     </div>
                     <div class="item">
                         <label for="img-4-2-3"><img src="img/4-2/3.png" alt=""></label>
-                        <p>No ápice</p>
+                        <p>No ápice (3)</p>
                         <input type="radio" name="img-4-2" id="img-4-2-3" value="3">
                     </div>
                 </div>
@@ -255,12 +310,12 @@
                 <div class="images-references">
                     <div class="item">
                         <label for="img-4-3-1"><img src="img/4-3/1.png" alt=""></label>
-                        <p>Visível a partir da <br> carúnculas sublinguais</p>
+                        <p>Visível a partir da <br> carúnculas sublinguais (0)</p>
                         <input type="radio" name="img-4-3" id="img-4-3-1" value="0">
                     </div>
                     <div class="item">
                         <label for="img-4-3-2"><img src="img/4-3/2.png" alt=""></label>
-                        <p>Visível a partir da crista <br> alveolar inferior</p>
+                        <p>Visível a partir da crista <br> alveolar inferior (1)</p>
                         <input type="radio" name="img-4-3" id="img-4-3-2" value="1">
                     </div>
                 </div>
@@ -269,53 +324,18 @@
             <div class="col-md-3"></div>
         </div>
 
-        <h1>Resultado: <span id="result">-</span></h1>
+        <hr>
+
+        <div class="row">
+            <p>
+                Com base nos dados informados, o resultado foi de: <span class="fw-bold" id="result">NA</span>.
+            </p>
+
+            <p id="result1">Resultado 1</p>
+            <p id="result2">Resultado 2</p>
+            <p id="result3">Resultado 3</p>
+        </div>
     </div>
-
-
-    <!-- ADICIONAR AS IMAGENS -->
-    <script>
-        const images = [
-            'img-1',
-            'img-2',
-            'img-3',
-            'img-4',
-        ];
-
-        images.forEach(image => {
-            const element = document.getElementById(image)
-
-            element.addEventListener('change', () => {
-                const id = image.split('-')[1]
-                const target = document.getElementById(`exam-${id}`)
-                const file = element.files[0];
-
-                if (file)
-                    target.src = URL.createObjectURL(file);
-            })
-        })
-
-    </script>
-
-    <!-- CALCULAR SCORE -->
-    <script>
-        let score = 0
-        const result = document.getElementById('result')
-        const inputs = [...document.querySelectorAll('input[type="radio"]')]
-
-        inputs.forEach(e => {
-            e.addEventListener('click', () => {
-                score = 0
-
-                inputs.forEach(input => {
-                    if (input.checked)
-                        score += parseInt(input.value)
-                })
-
-                result.innerText = score === 1 ? `${score} ponto` : `${score} pontos`
-            })
-        })
-    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/moment.js"></script>
