fix: Melhoria na exibicao do resultado do exame

--- a/index.html
+++ b/index.html
@@ -327,13 +327,8 @@
         <hr>
 
         <div class="row">
-            <p>
-                Com base nos dados informados, o resultado foi de: <span class="fw-bold" id="result">NA</span>.
-            </p>
-
-            <p id="result1">Resultado 1</p>
-            <p id="result2">Resultado 2</p>
-            <p id="result3">Resultado 3</p>
+            <p>Com base nos dados informados, o resultado foi de: <span class="fw-bold" id="info-score">NA</span>.</p>
+            <p id="info-result"></p>
         </div>
     </div>
 
