fix: melhoria na interface

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1 class="m-5">Protocolo de Avaliação o Frênulo da Língua em Bebês</h1>
             <div>
                 <img class="logo" src="img/logotipo.jpg" alt="">
-                <p>Dra Maria Raquel</p>
+                <p class="fw-bold">Drª Maria Raquel</p>
             </div>
         </div>
 
@@ -33,30 +33,30 @@
         <div class="row">
             <div class="form-group col-4">
                 <label for="form-label">Nome</label>
-                <input class="form-control" type="text">
+                <input class="form-control form-control-sm" type="text">
             </div>
             <div class="form-group col-2">
                 <label for="form-label">Data do Exame</label>
-                <input class="form-control" type="date" id="date-exam">
+                <input class="form-control form-control-sm" type="date" id="date-exam">
             </div>
             <div class="form-group col-2">
                 <label for="form-label">Data Nasc.</label>
-                <input class="form-control" type="date" id="date-birth">
+                <input class="form-control form-control-sm" type="date" id="date-birth">
             </div>
             <div class="form-group col-2">
                 <label for="form-label">Idade</label>
-                <input class="form-control" disabled id="age">
+                <input class="form-control form-control-sm" disabled id="age">
             </div>
             <div class="form-group col-2">
                 <label>Gênero</label>
-                <select class="form-select">
+                <select class="form-select form-select-sm">
                     <option value="M">Masculino</option>
                     <option value="F">Femenino</option>
                 </select>
             </div>
             <div class="form-group col-4">
                 <label for="form-label">Mãe</label>
-                <input class="form-control" type="text">
+                <input class="form-control form-control-sm" type="text">
             </div>
         </div>
 
@@ -67,14 +67,16 @@
             <div class="col-6">
                 <p>Há casos na família de alteração de frênulo da língua?</p>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0">
-                    <label class="form-check-label" for="historic-0">Não</label>
-                </div>
+                <div class="d-flex">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0" checked>
+                        <label class="form-check-label" for="historic-0">Não</label>
+                    </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="historic" id="historic-1" value="1">
-                    <label class="form-check-label" for="historic-1">Sim</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="historic" id="historic-1" value="1">
+                        <label class="form-check-label" for="historic-1">Sim</label>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -86,14 +88,16 @@
             <div class="col-6">
                 <p>Problemas de Saúde</p>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="health" id="health-0">
-                    <label class="form-check-label" for="health-0">Não</label>
-                </div>
+                <div class="d-flex">
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="health" id="health-0" checked>
+                        <label class="form-check-label" for="health-0">Não</label>
+                    </div>
 
-                <div class="form-check">
-                    <input class="form-check-input" type="radio" name="health" id="health-1">
-                    <label class="form-check-label" for="health-1">Sim</label>
+                    <div class="form-check">
+                        <input class="form-check-input" type="radio" name="health" id="health-1">
+                        <label class="form-check-label" for="health-1">Sim</label>
+                    </div>
                 </div>
 
                 <div class="form-group">
@@ -116,7 +120,7 @@
                     <div class="item">
                         <label for="img-1-1"><img src="img/1/1.png" alt=""></label>
                         <p>Lábio Fechado (0)</p>
-                        <input type="radio" name="img-1" id="img-1-1" value="0">
+                        <input type="radio" name="img-1" id="img-1-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-1-2"><img src="img/1/2.png" alt=""></label>
@@ -152,7 +156,7 @@
                     <div class="item">
                         <label for="img-2-1"><img src="img/2/1.png" alt=""></label>
                         <p>Língua na linha média (0)</p>
-                        <input type="radio" name="img-2" id="img-2-1" value="0">
+                        <input type="radio" name="img-2" id="img-2-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-2-2"><img src="img/2/2.png" alt=""></label>
@@ -194,7 +198,7 @@
                     <div class="item">
                         <label for="img-3-1"><img src="img/3/1.png" alt=""></label>
                         <p>Arredondada (0)</p>
-                        <input type="radio" name="img-3" id="img-3-1" value="0">
+                        <input type="radio" name="img-3" id="img-3-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-3-2"><img src="img/3/2.png" alt=""></label>
@@ -231,7 +235,7 @@
                     <div class="item">
                         <label for="img-4-1"><img src="img/4/1.png" alt=""></label>
                         <p>É possível visualizar</p>
-                        <input type="radio" name="img-4" id="img-4-1" value="0">
+                        <input type="radio" name="img-4" id="img-4-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-4-2"><img src="img/4/2.png" alt=""></label>
@@ -253,7 +257,7 @@
             <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
-                    <input class="form-control" type="file" id="img-4">
+                    <input class="form-control" type="file" id="img-4" placeholder="OOO">
                 </div>
             </div>
 
@@ -266,7 +270,7 @@
                     <div class="item">
                         <label for="img-4-1-1"><img src="img/4-1/1.png" alt=""></label>
                         <p>Delgado (0)</p>
-                        <input type="radio" name="img-4-1" id="img-4-1-1" value="0">
+                        <input type="radio" name="img-4-1" id="img-4-1-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-4-1-2"><img src="img/4-1/2.png" alt=""></label>
@@ -286,7 +290,7 @@
                     <div class="item">
                         <label for="img-4-2-1"><img src="img/4-2/1.png" alt=""></label>
                         <p>No terço médio (0)</p>
-                        <input type="radio" name="img-4-2" id="img-4-2-1" value="0">
+                        <input type="radio" name="img-4-2" id="img-4-2-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-4-2-2"><img src="img/4-2/2.png" alt=""></label>
@@ -311,7 +315,7 @@
                     <div class="item">
                         <label for="img-4-3-1"><img src="img/4-3/1.png" alt=""></label>
                         <p>Visível a partir da <br> carúnculas sublinguais (0)</p>
-                        <input type="radio" name="img-4-3" id="img-4-3-1" value="0">
+                        <input type="radio" name="img-4-3" id="img-4-3-1" value="0" checked>
                     </div>
                     <div class="item">
                         <label for="img-4-3-2"><img src="img/4-3/2.png" alt=""></label>
@@ -327,7 +331,8 @@
         <hr>
 
         <div class="row">
-            <p>Com base nos dados informados, o resultado foi de: <span class="fw-bold" id="info-score">NA</span>.</p>
+            <p>Com base nos dados informados, o resultado foi de: <span class="fw-bold" id="info-score">Não
+                    Concluído</span>.</p>
             <p id="info-result"></p>
         </div>
     </div>
