fix: Correcao no calculo do score. Correcoes menores

--- a/index.html
+++ b/index.html
@@ -235,17 +235,17 @@
                     <div class="item">
                         <label for="img-4-1"><img src="img/4/1.png" alt=""></label>
                         <p>É possível visualizar</p>
-                        <input type="radio" name="img-4" id="img-4-1" value="0" checked>
+                        <input type="radio" checked>
                     </div>
                     <div class="item">
                         <label for="img-4-2"><img src="img/4/2.png" alt=""></label>
                         <p>Não é possível visualizar</p>
-                        <input type="radio" name="img-4" id="img-4-2" value="0">
+                        <input type="radio">
                     </div>
                     <div class="item">
                         <label for="img-4-3"><img src="img/4/3.png" alt=""></label>
                         <p>Visualizado com manobra</p>
-                        <input type="radio" name="img-4" id="img-4-3" value="0">
+                        <input type="radio">
                     </div>
                     <div class="item">
                         <img id="exam-4" src="" alt="">
@@ -257,7 +257,7 @@
             <div class="col-md-3 no-print">
                 <div class="mb-3">
                     <label for="formFile" class="form-label">Foto Exame</label>
-                    <input class="form-control" type="file" id="img-4" placeholder="OOO">
+                    <input class="form-control" type="file" id="img-4">
                 </div>
             </div>
 
