Atualizacao dos textos

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="col-6">
-                    <p>Problemas de Saúde</p>
+                    <p>Problemas de Saúde</p><br>
 
                     <div class="d-flex">
                         <div class="form-check">
@@ -119,8 +119,84 @@
         </div>
 
         <div class="page">
-            <h2 class="mb-5 text-center">Avaliação Anatomofuncional (Triagem Neonatal)</h2>
-            
+            <h3 class="mb-3">Teste da Línguinha</h3>
+            <p>
+                O Projeto de Lei nº 4.832/12 de autoria do Deputado Federal Onofre Santo Agostini,
+                que "obriga a realização do protocolo de avaliação do frênulo da língua em bebês
+                em todos os hospitais e maternidade do Brasil", foi sancionada pela Presidência
+                da República e se converteu na Lei nº 13.002, de 20 de Junho de 2014. <br>
+                Esta Lei entra em vigor após decorridos 180 dias de sua publicação oficial. <br>
+                O protocolo de avaliação do frênulo da língua para bebês foi desenvolvido durante 
+                o mestrado da fonodióloga Roberta Lopes de Castro Martinelli na Faculdade de Odonotologia
+                de Bauru da Universidade de São Paulo. Com a aplicação desse protocolo é possível identificar
+                se o frênulo lingual limita os movimentos da língua, que são importantes para sugar, mastigar,
+                engolir e falar. <br>
+                Pesquisas em todo o mundo têm comprovado a importância do diagóstico e intervenção precoce 
+                dessa alteração. Com a aprovação dessa lei, o Brasil torna-se o primeiro país a oferecer
+                esse teste em todas as maternidades, abrindo mais um campo de atuação para os profissionais
+                da saúde e beneficiando a população.
+            </p>
+        </div>
+
+        <div class="page">
+            <hr>
+
+            <h3 class="mb-3">Peça o teste da linguinha: é eficaz, rápido e não dói</h3>
+            <p>
+                Língua presa é uma alteração comum, mas muitas vezes ignorada.
+                Ela está presente desde o nascimento e ocorre quando uma pequena
+                porção de tecido, que deveria ter desaparecido durante o desenvolvimento
+                do bebê na gravidez, permanece na parte debaixo da língua, limitando
+                seus movimentos. <br>
+                O teste da línguuinha é um exame padronizado que possibilita diagnosticar
+                e indicar o tratamento precoce das limitações dos movimentos da língua causadas
+                pela língua presa que podem comprometer as funções exercidas pela língua: sugar,
+                engolir, mastigar e falar.
+            </p>
+
+            <hr>
+
+            <h3 class="mb-3">Como fazer o teste da linguinha</h3>
+            <p>
+                O teste da línguinha deve ser realizado por um profissional da área da saúde
+                qualificado, como por exemplo, o fonaudiólogo. Ele deve elevar a língua do bebê
+                para verificar se a língua está presa, e também observar o bebê chorando e sugando.
+                O exame não tem contraindicações. <br>
+                Recomenda-se que a avaliação do frênulo da língua seja inicialmente realizada na maternidade.
+                A avaliação precoce é ideal para que os bebês sema diagnosticados e tratados com sucesso.
+            </p>
+
+            <hr>
+
+            <h3 class="mb-3">O que fazer se a maternidade ou hospital não tiver realizado o teste</h3>
+            <p>
+                Avise o pediatra ou profissional da saúde logo na primeira consulta.
+                Ele deverá encaminhar o bebê para os locais que estejam preparados para relaizar o teste. <br>
+                No Brasil, a lei nº 13.002 de 20 de Junho de 2014, que torna obrigatória a aplicação do protocolo
+                de avaliação do frênulo lingual em todos os recém-nascidos é recente, por isto, não existe um cadastro
+                oficial no Ministério da Saúde de todos os locais que realizam o exame.
+            </p>
+
+            <hr>
+
+            <h3 class="mb-3">Resultado</h3>
+            <p>
+                Existem graus variados de língua presa, por isto a importância de
+                haver um teste que leva em consideração os aspectos anatômicos e
+                funcionais para fazer um diagnóstico preciso e indicar a necessidade
+                da realização do "pique no frênulo que está preso na língua". Se o
+                resultado da avaliação do protocolo indicar a presença da língua presa,
+                o procedimento de liberação do frênulo lingual, popularmente conhecido
+                como "pique na língua", deve ser realizado por um profissional médico
+                ou dentista.
+            </p>
+
+            <hr>
+        </div>
+
+        <div class="page">
+            <h2 class="mb-2 text-center">I Avaliação Anatomofuncional</h2>
+
             <hr>
 
             <h3 class="mb-3">1. Postura de lábio em repouso</h3>
@@ -225,9 +301,9 @@
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="page"></div>
-
+        <div class="page">
             <h3 class="mb-3">4.1 Espessura do Frênulo</h3>
             <div class="row">
                 <div class="col-md-9">
@@ -292,11 +368,11 @@
 
                 <div class="col-md-3"></div>
             </div>
-
         </div>
 
         <div class="page">
             <div class="row">
+
                 <p>Com base nos dados informados, o resultado foi de:
                     <span class="fw-bold" id="info-score">Não Concluído</span>.
                 </p>
