--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/moment.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/score.js"></script>
+    <script src="js/idade.js"></script>
 </body>
 
 </html>
