Melhorias de interface e impressão

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </div>
         </div>
 
-        <div class="page">
+        <div class="page only-print">
             <h3 class="mb-3">Teste da Línguinha</h3>
             <p>
                 O Projeto de Lei nº 4.832/12 de autoria do Deputado Federal Onofre Santo Agostini,
@@ -126,19 +126,19 @@
                 em todos os hospitais e maternidade do Brasil", foi sancionada pela Presidência
                 da República e se converteu na Lei nº 13.002, de 20 de Junho de 2014. <br>
                 Esta Lei entra em vigor após decorridos 180 dias de sua publicação oficial. <br>
-                O protocolo de avaliação do frênulo da língua para bebês foi desenvolvido durante 
+                O protocolo de avaliação do frênulo da língua para bebês foi desenvolvido durante
                 o mestrado da fonodióloga Roberta Lopes de Castro Martinelli na Faculdade de Odonotologia
                 de Bauru da Universidade de São Paulo. Com a aplicação desse protocolo é possível identificar
                 se o frênulo lingual limita os movimentos da língua, que são importantes para sugar, mastigar,
                 engolir e falar. <br>
-                Pesquisas em todo o mundo têm comprovado a importância do diagóstico e intervenção precoce 
+                Pesquisas em todo o mundo têm comprovado a importância do diagóstico e intervenção precoce
                 dessa alteração. Com a aprovação dessa lei, o Brasil torna-se o primeiro país a oferecer
                 esse teste em todas as maternidades, abrindo mais um campo de atuação para os profissionais
                 da saúde e beneficiando a população.
             </p>
         </div>
 
-        <div class="page">
+        <div class="page only-print">
             <hr>
 
             <h3 class="mb-3">Peça o teste da linguinha: é eficaz, rápido e não dói</h3>
@@ -205,17 +205,17 @@
                     <div class="images-references">
                         <div class="item">
                             <label for="img-1-1"><img src="img/1/1.png" alt=""></label>
-                            <p>Lábio Fechado (0)</p>
+                            <p>Lábio Fechado <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-1" id="img-1-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-1-2"><img src="img/1/2.png" alt=""></label>
-                            <p>Lábio Entreaberto (1)</p>
+                            <p>Lábio Entreaberto <span class="badge bg-primary">1</span></p>
                             <input type="radio" name="img-1" id="img-1-2" value="1">
                         </div>
                         <div class="item">
                             <label for="img-1-3"><img src="img/1/3.png" alt=""></label>
-                            <p>Lábio Aberto (1)</p>
+                            <p>Lábio Aberto <span class="badge bg-primary">1</span></p>
                             <input type="radio" name="img-1" id="img-1-3" value="1">
                         </div>
                     </div>
@@ -230,22 +230,24 @@
                     <div class="images-references">
                         <div class="item">
                             <label for="img-2-1"><img src="img/2/1.png" alt=""></label>
-                            <p>Língua na linha média (0)</p>
+                            <p>Língua na linha média <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-2" id="img-2-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-2-2"><img src="img/2/2.png" alt=""></label>
-                            <p>Língua elevada (0)</p>
+                            <p>Língua elevada <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-2" id="img-2-2" value="0">
                         </div>
                         <div class="item">
                             <label for="img-2-3"><img src="img/2/3.png" alt=""></label>
-                            <p>Língua na linha média com <br> elevação das laterais (2)</p>
+                            <p>Língua na linha média com <br> elevação das laterais <span
+                                    class="badge bg-primary">2</span></p>
                             <input type="radio" name="img-2" id="img-2-3" value="2">
                         </div>
                         <div class="item">
                             <label for="img-2-4"><img src="img/2/4.png" alt=""></label>
-                            <p>Ponta da língua baixa com <br> elevação das laterais (2)</p>
+                            <p>Ponta da língua baixa com <br> elevação das laterais <span
+                                    class="badge bg-primary">2</span></p>
                             <input type="radio" name="img-2" id="img-2-4" value="2">
                         </div>
                     </div>
@@ -260,17 +262,17 @@
                     <div class="images-references">
                         <div class="item">
                             <label for="img-3-1"><img src="img/3/1.png" alt=""></label>
-                            <p>Arredondada (0)</p>
+                            <p>Arredondada <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-3" id="img-3-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-3-2"><img src="img/3/2.png" alt=""></label>
-                            <p>Ligeria fenda no ápice (2)</p>
+                            <p>Ligeria fenda no ápice <span class="badge bg-primary">2</span></p>
                             <input type="radio" name="img-3" id="img-3-2" value="2">
                         </div>
                         <div class="item">
                             <label for="img-3-3"><img src="img/3/3.png" alt=""></label>
-                            <p>Formato de coração (3)</p>
+                            <p>Formato de coração <span class="badge bg-primary">3</span></p>
                             <input type="radio" name="img-3" id="img-3-3" value="3">
                         </div>
                     </div>
@@ -304,18 +306,20 @@
         </div>
 
         <div class="page">
+            <hr>
+
             <h3 class="mb-3">4.1 Espessura do Frênulo</h3>
             <div class="row">
                 <div class="col-md-9">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-1-1"><img src="img/4-1/1.png" alt=""></label>
-                            <p>Delgado (0)</p>
+                            <p>Delgado <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-4-1" id="img-4-1-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-4-1-2"><img src="img/4-1/2.png" alt=""></label>
-                            <p>Espesso (2)</p>
+                            <p>Espesso <span class="badge bg-primary">2</span></p>
                             <input type="radio" name="img-4-1" id="img-4-1-2" value="2">
                         </div>
                     </div>
@@ -324,23 +328,25 @@
                 <div class="col-md-3"></div>
             </div>
 
+            <hr>
+
             <h3 class="mb-3">4.2 Fixação do frênulo na face sublingual</h3>
             <div class="row">
                 <div class="col-md-9">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-2-1"><img src="img/4-2/1.png" alt=""></label>
-                            <p>No terço médio (0)</p>
+                            <p>No terço médio <span class="badge bg-primary">0</span></p>
                             <input type="radio" name="img-4-2" id="img-4-2-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-4-2-2"><img src="img/4-2/2.png" alt=""></label>
-                            <p>Entre o terço médio e o ápice (2)</p>
+                            <p>Entre o terço médio e o ápice <span class="badge bg-primary">2</span></p>
                             <input type="radio" name="img-4-2" id="img-4-2-2" value="2">
                         </div>
                         <div class="item">
                             <label for="img-4-2-3"><img src="img/4-2/3.png" alt=""></label>
-                            <p>No ápice (3)</p>
+                            <p>No ápice <span class="badge bg-primary">3</span></p>
                             <input type="radio" name="img-4-2" id="img-4-2-3" value="3">
                         </div>
                     </div>
@@ -349,18 +355,22 @@
                 <div class="col-md-3"></div>
             </div>
 
+            <hr>
+
             <h3 class="mb-3">4.3 Fixação do frênulo no assoalho da boca</h3>
             <div class="row">
                 <div class="col-md-9">
                     <div class="images-references">
                         <div class="item">
                             <label for="img-4-3-1"><img src="img/4-3/1.png" alt=""></label>
-                            <p>Visível a partir da <br> carúnculas sublinguais (0)</p>
+                            <p>Visível a partir da <br> carúnculas sublinguais <span class="badge bg-primary">0</span>
+                            </p>
                             <input type="radio" name="img-4-3" id="img-4-3-1" value="0" checked>
                         </div>
                         <div class="item">
                             <label for="img-4-3-2"><img src="img/4-3/2.png" alt=""></label>
-                            <p>Visível a partir da crista <br> alveolar inferior (1)</p>
+                            <p>Visível a partir da crista <br> alveolar inferior <span class="badge bg-primary">1</span>
+                            </p>
                             <input type="radio" name="img-4-3" id="img-4-3-2" value="1">
                         </div>
                     </div>
@@ -368,13 +378,14 @@
 
                 <div class="col-md-3"></div>
             </div>
+
+            <hr>
         </div>
 
         <div class="page">
             <div class="row">
-
                 <p>Com base nos dados informados, o resultado foi de:
-                    <span class="fw-bold" id="info-score">Não Concluído</span>.
+                    <span class="fw-bold" id="info-score">0 ponto</span>
                 </p>
                 <p>
                     O resultado é: <span id="info-result"></span>
@@ -390,6 +401,7 @@
     <script src="js/moment.js"></script>
     <script src="js/score.js"></script>
     <script src="js/idade.js"></script>
+    <script>showResult()</script>
 </body>
 
 </html>
