add bateria de testes

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <script src="js/moment.js"></script>
     <script src="js/score.js"></script>
     <script src="js/idade.js"></script>
-    <script>showResult()</script>
+    <script>calculateResult()</script>
 </body>
 
 </html>
