--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         <div class="page">
 
             <div class="header">
-                <h1 class="m-5 text-center">Protocolo de Avaliação o Frênulo da Língua em Bebês</h1>
-                <div>
-                    <img class="logo" src="img/logotipo.jpg" alt="">
-                    <p class="fw-bold">Drª Maria Raquel</p>
-                </div>
-                <div>
-                    <img class="logo" src="img/teste-da-linguinha.jpg" alt="">
-                    <p class="fw-bold">Teste Linguinha</p>
+                <h1 class="m-5 text-center" id="title">Protocolo de Avaliação o Frênulo da Língua em Bebês</h1>
+                <div class="logos">
+                    <div>
+                        <img class="logo" src="img/logotipo.jpg" alt="">
+                        <p class="fw-bold">Drª Maria Raquel</p>
+                    </div>
+                    <div>
+                        <img class="logo" src="img/teste-da-linguinha.jpg" alt="">
+                        <p class="fw-bold">Teste Linguinha</p>
+                    </div>
                 </div>
             </div>
 
@@ -36,34 +38,34 @@
             <hr>
 
             <div class="row">
-                <div class="form-group col-4">
+                <div class="form-group col-md-4 col-sm-12">
                     <label for="form-label">Nome</label>
                     <input class="form-control form-control-sm" type="text">
                 </div>
-                <div class="form-group col-2">
+                <div class="form-group col-md-2 col-sm-12">
                     <label for="form-label">Data do Exame</label>
                     <input class="form-control form-control-sm" type="date" id="date-exam">
                 </div>
-                <div class="form-group col-2">
+                <div class="form-group col-md-3 col-sm-12">
                     <label for="form-label">Data Nasc.</label>
                     <input class="form-control form-control-sm" type="date" id="date-birth">
                 </div>
-                <div class="form-group col-2">
+                <div class="form-group col-md-2 col-sm-12">
                     <label for="form-label">Idade</label>
                     <input class="form-control form-control-sm" disabled id="age">
                 </div>
-                <div class="form-group col-2">
+                <div class="form-group col-md-2 col-sm-12">
                     <label>Gênero</label>
                     <select class="form-select form-select-sm">
                         <option value="M">Masculino</option>
                         <option value="F">Femenino</option>
                     </select>
                 </div>
-                <div class="form-group col-4">
+                <div class="form-group col-md-4 col-sm-12">
                     <label for="form-label">Mãe</label>
                     <input class="form-control form-control-sm" type="text">
                 </div>
-                <div class="form-group col-4">
+                <div class="form-group col-md-4 col-sm-12">
                     <label for="form-label">Local da Realização do Exame</label>
                     <input class="form-control form-control-sm" type="text">
                 </div>
@@ -394,6 +396,10 @@
                     Conclusão: <span id="info-conclusion"></span>
                 </p>
             </div>
+        </div>
+
+        <div class="mb-5 d-flex justify-content-end">
+            <button class="btn btn-sm btn-primary no-print" onclick="print()">Imprimir</button>
         </div>
     </div>
 
