--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <label>Gênero</label>
                     <select class="form-select form-select-sm">
                         <option value="M">Masculino</option>
-                        <option value="F">Femenino</option>
+                        <option value="F">Feminino</option>
                     </select>
                 </div>
                 <div class="form-group col-md-4 col-sm-12">
@@ -80,8 +80,7 @@
 
                     <div class="d-flex">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0"
-                                checked>
+                            <input class="form-check-input" type="radio" name="historic" id="historic-0" value="0" checked>
                             <label class="form-check-label" for="historic-0">Não</label>
                         </div>
 
