correcao de texto. remocao de arquivos mortos

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <h3 class="mb-3">Como fazer o teste da linguinha</h3>
             <p>
                 O teste da línguinha deve ser realizado por um profissional da área da saúde
-                qualificado, como por exemplo, o fonaudiólogo. Ele deve elevar a língua do bebê
+                qualificado, como por exemplo, o médico pediatra, médico otorrino, cirurgião dentista ou o fonaudiólogo. Ele deve elevar a língua do bebê
                 para verificar se a língua está presa, e também observar o bebê chorando e sugando.
                 O exame não tem contraindicações. <br>
                 Recomenda-se que a avaliação do frênulo da língua seja inicialmente realizada na maternidade.
